tests/api/reference/negative/07-pad-to-backward.asm
emit.u8(1)
pad_to(0)
